# cuda-triton-multiarch

./: .gitignore  Makefile  Makefile.windows.ps1  README.md  build_wheel.bat  cuda_kernels.cp310-win_amd64.pyd  gpu_utils.py  pyproject.toml  requirements-windows.txt  requirements.txt  setup.py  test.py  torch_cuda_compat.py
.github/workflows/: publish.yml
benchmarks/: bench_attention.py  bench_cuda_flash_attention.py  bench_cuda_fused.py  bench_cuda_softmax.py  bench_cutlass_flash_attention.py  bench_flash_attention.py  bench_flash_attention_full.py  bench_fused.py  bench_quantized_matmul.py  bench_rmsnorm.py  bench_softmax.py  bench_swiglu.py
cuda/: arch_utils.py  bindings.cu  cuda_kernels.cp312-win_amd64.pyd  fused_rmsnorm_swiglu.cu  helpers.cuh  reduce.cuh  setup.py  softmax.cu  softmax_triton.cu  wmma_matmul.cu
cuda/flash_attn/: README.md  flash.h  flash_api.cu  (+13 more)
cute/: 00_layouts.py  01_vector_add.py  02_tiled_copy_g2s.py  03_tiled_mma.py  README.md  flash_fwd.py  softmax.py  test_smoke.py  utils.py
kernels/: __init__.py  attention.py  attention_api.py  build_extensions.py  flash_attention.py  flash_attention_full.py  fused_rmsnorm_swiglu.py  kv_prefetch.py  multi_gpu.py  quantized_matmul.py  rmsnorm.py  softmax.py  swiglu.py
scratch/: 01_layouts.cu  02_tensor.cu  03_mma.cu  04_mma.cu  05_gemm.cu  README.md  bench.py  bench_matmul.py  bench_swizzle_writes.cu  convert_acc_to_a.cu  fa_test.cu  fragment_reshape.cu  retile_viz.cu  swizzle_layouts.cu  swizzle_sim.py  tensor.py  test_allreduce.cu  test_softmax.cu  v_fragment_test.cu
tests/: test_kernels.py
(+18 files in other folders)
